@@ -210,6 +210,7 @@ namespace libdar
 	data_dir *files;                             //< structure containing files and their status in the set of archive used for that database (is set to nullptr in partial mode)
 	storage *data_files;                         //< when reading archive in partial mode, this is where is located the "not readed" part of the archive (is set to nullptr in partial-read-only mode)
 	bool check_order_asked;                      //< whether order check has been asked
+	unsigned char cur_db_version;                //< current db version (for informational purposes)
 
 	void build(user_interaction & dialog, generic_file & f, bool partial, bool read_only, unsigned char db_version);  //< used by constructors
 	archive_num get_real_archive_num(archive_num num, bool revert) const;
